force-app/main/default/objects/custom_create258__c/custom_create258__c.object-meta.xml
<CustomObject>
    <label>Custom created object258</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects258</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>