force-app/main/default/objects/custom_create258__c/fields/custom_create_258field679__c.field-meta.xml
<CustomField>
    <fullName>custom_create_258field679__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 258field679</label>
    <type>Checkbox</type>
</CustomField>