force-app/main/default/objects/custom_create258__c/fields/custom_create_258field721__c.field-meta.xml
<CustomField>
    <fullName>custom_create_258field721__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 258field721</label>
    <type>Checkbox</type>
</CustomField>